--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,4 +6,10 @@
         android:title="About"
         android:id="@+id/about" />
 
+    <item
+        android:title="Refresh"
+        android:id="@+id/refresh"
+        android:icon="@drawable/ic_refresh_black_24dp"
+        app:showAsAction="always" />
+
 </menu>
